--- a/climbing-store/src/Navbar.css
+++ b/climbing-store/src/Navbar.css
@@ -1,51 +1,62 @@
 /* src/Navbar.css */
-.navbar {
-    padding: 1rem;
+
+.navbar * {
+    display: inline;
   }
-  
+
+  .navbar-img {
+    height: 80px;
+    margin-left: 20px;
+    margin-top: 10px;
+  }
+
   .navbar-container {
     display: flex;
-    justify-content: space-between;
+    height: 100px;
+    position: fixed;
     align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
+    justify-content: space-between;
   }
   
   .navbar-logo {
-    color: #070bf1;
+    color: #000000;
     font-size: 1.5rem;
   }
   
+  .navbar-links-container {
+    display: flex;
+    justify-content: center; /* Center the links */
+    flex-grow: 1; /* Allow the container to grow */
+    display: inline;
+}
   .navbar-links {
     list-style: none;
-    display: flex;
     gap: 1rem;
+
   }
   
   .navbar-links a {
-    color: #1e07f1;
+    color: #000000;
     text-decoration: none;
     font-size: 1rem;
     padding: 0.5rem 1rem;
-    border: 1px solid #000000;
-    border-radius: 5px;
-    transition: background-color 0.3s ease, background-color 0.3s ease;
+
   }
-  
-  .navbar-links a:hover {
-    transform: scale(1.1);
-    background-color: hsl(0, 0%, 73%, 0.5);
-  }
-  
-  @media (max-width: 768px) {
-    .navbar-container {
+
+
+ /* Responsive design */
+@media (max-width: 768px) {
+  .navbar-container {
       flex-direction: column;
-    }
-  
-    .navbar-links {
+  }
+
+  .navbar-links {
       flex-direction: column;
       align-items: center;
       gap: 1rem;
-    }
   }
-  
+}
