Update navbar and add hero section

--- a/climbing-store/src/App.css
+++ b/climbing-store/src/App.css
@@ -1,13 +1,12 @@
 body {
   height: 125vh;
-  background-image: url('./images/ClimbingWebsiteBackground.png');
-  background-size: 50%;
-  font-family: sans-serif;
+  background-image: url('./images/Background.jpg');
+  background-size: cover;
+  font-family: 'Roboto', sans-serif;
   margin-top: 80px;
   padding: 30px;
   background-repeat: no-repeat; /* Prevent the image from repeating */
   background-position: center; /* Center the image */
-  background-color: #fbe6b1;
 }
 
 .App {
