--- a/climbing-store/src/Navbar.css
+++ b/climbing-store/src/Navbar.css
@@ -30,6 +30,8 @@
     display: flex;
     display: inline;
     margin-left: 20px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 50px;
   }
   
   .navbar-links-container {
@@ -38,6 +40,7 @@
     flex-grow: 1; /* Allow the container to grow */
     align-items: center;
     justify-content: center;
+    margin-left: -300px;
 }
   .navbar-links {
     list-style: none;
@@ -49,9 +52,9 @@
   .navbar-links a {
     color: #000000;
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 20px;
     padding: 0.5rem 1rem;
-
+    margin: 25px;
   }
 
 
