add posts component to home, format posts, format navbar account dropdown and icons

--- a/climbing-store/src/Navbar.css
+++ b/climbing-store/src/Navbar.css
@@ -20,6 +20,7 @@
     right: 0;
     background-color: white;
     justify-content: space-between;
+    z-index: 999; /* Ensure this is high enough */
   }
   
   .navbar-logo {
@@ -40,14 +41,17 @@
     flex-grow: 1; /* Allow the container to grow */
     align-items: center;
     justify-content: center;
-    margin-left: -300px;
+    margin-left: -200px;
+    z-index: 999; /* Ensure this is high enough */
 }
-  .navbar-links {
-    list-style: none;
-    gap: 1rem;
-    display: inline;
-    display: flex;
-  }
+
+.navbar-links {
+  list-style: none;
+  gap: 1rem;
+  display: flex;
+  justify-content: center;
+   width: 100%; /* Center links in the available space */
+}
   
   .navbar-links a {
     color: #000000;
@@ -67,6 +71,84 @@
   .navbar-links {
       flex-direction: column;
       align-items: center;
+      justify-content: center;
       gap: 1rem;
   }
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: auto;
+  white-space: nowrap;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 999; /* Ensure this is high enough */
+  right: 0; /* Align dropdown to the right edge */
+  /* left: auto; */
+}
+
+.dropdown-content a, .dropdown-content button {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  z-index: 999; /* Ensure this is high enough */
+  text-align: left; /* Align text to the left */
+}
+
+.dropdown-content a:hover, .dropdown-content button:hover {background-color: #f1f1f1;}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  z-index: 999; /* Ensure this is high enough */
+}
+
+
+.logout-button {
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+  color: black;
+  font-size: 1rem;
+  cursor: pointer;
+  padding: 10px;
+  transition: color 0.3s ease;
+  text-decoration: none;
+  /* margin: 25px; */
+}
+
+.logout-button:hover {
+  color: #007bff;
+}
+
+.logout-button svg {
+  margin-right: 5px; /* Add some space between the icon and text */
+}
+
+.navbar-account {
+  margin-left: auto; /* Push account items to the far right */
+  display: flex;
+  padding-right: 30px;
+  align-items: center;
+}
+
+.dropbtn {
+  display: flex;
+  align-items: center; /* Ensure items are centered horizontally */
+  justify-content: center;
+  background-color: transparent;
+  border: none;
+  color: black;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.dropbtn:hover {
+  color: #131313;
+}
+
+.dropbtn svg {
+  margin-left: 5px; /* Add space between Account text and icon */
 }
